--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@remix-run/react": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
     "@sinclair/typebox": "^0.31.28",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "isbot": "^3.6.8",
+    "mysql2": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sequelize": "^6.35.1"
@@ -25,6 +28,7 @@
     "@remix-run/eslint-config": "^2.3.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/sequelize": "^4.28.19",
     "eslint": "^8.38.0",
     "typescript": "^5.1.6"
   },
