--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "tiendas",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -21,6 +21,7 @@
     "mysql2": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-supertyped": "^0.0.4",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
