--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sinclair/typebox": "^0.31.28",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.1.1",
     "isbot": "^3.6.8",
     "mysql2": "^3.6.5",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.3.1",
     "@remix-run/eslint-config": "^2.3.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/sequelize": "^4.28.19",
